src/k7/deploy/manifests/k7-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k7-api
  namespace: kube-system
  labels:
    app: k7-api
spec:
  type: NodePort
  selector:
    app: k7-api
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      nodePort: 31007
